# oxidie_checkers

./: .gitignore  Cargo.toml  LICENSE.md  PolyCheckersInterface.md  README.md
.github/workflows/: rust.yml
src/: algo.rs  board.rs  generation.rs  main.rs  startState.txt  transposition.rs  utils.rs
