[package]
name = "oxidie_checkers"
version = "0.1.0"
edition = "2021"
include = ["/src/startState.txt"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#used beacuase its the only way to get static vars that I know of
once_cell = "1.8.0"
#if you are having trouble compiling for your system comment this and the global allocator in the main.rs out 
mimalloc = { version = "*", default-features = false }
rand = "0.8.5"

